misc updates, podcase episode 4, org changes

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ contact-main: yes
 
   <div class="fluid-container landing-nav margin-bottom-30">
     <div class="container">
-      <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; StoneAge EU +44 (0) 1684 892065</h1>
+      <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; EU +44 (0) 1684 892065 &nbsp;|&nbsp; NL +31 8590 27370</h1>
       <h4 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES. <span class="grey">Monday through Friday 8:00am - 5:00pm regional</span></h4>
     </div>
   </div>
@@ -155,8 +155,8 @@ contact-main: yes
                 <a href="mailto:Randolph.Briggs@stoneagetools.com">randolph.briggs@stoneagetools.com</a>
               </p>
               <h3>USA - Central &amp; West</h3>
-              <p>Mike Johnson | +1 (970) 769-1448<br/>
-                <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a>
+              <p>Dan de la Torre | +1 (970) 946-7703<br/>
+                <a href="mailto:dan.delatorre@stoneagetools.com">dan.delatorre@stoneagetools.com</a>
               </p>
                <h3>USA - Northeast &amp; Central</h3>
                <p>Jonathan Wood | +1 (970) 946-7212<br/>
