--- a/loc-durango.html
+++ b/loc-durango.html
@@ -42,14 +42,14 @@ contact-durango: yes
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <p>Our base of operations houses the engineering and customer service teams, along with a state of the art machine shop and all operations. Our primary inventory stock of tools, equipment, and parts is ready to ship on demand.</p>
+          <p>Our base of operations houses the engineering, custom solutions, and customer service teams, along with a state of the art machine shop and all operations. Our primary inventory stock of tools, equipment, and parts is ready to ship on demand.</p>
         </div>
 
         <h3 class="section-heading">Customer Service</h3>
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Janet Mosher</strong><br/>
-              Sales Fulfillment Coordinator<br/>
+              Customer Success Coordinator<br/>
               Main: +1 (970) 403-8530<br/>
             <a href="mailto:janet.mosher@stoneagetools.com">janet.mosher@stoneagetools.com</a></p>
           </div>
@@ -62,39 +62,50 @@ contact-durango: yes
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Daniel Jaber</strong><br/>
-              Customer Service Specialist<br/>
-              Main: +1 (970) 403-1846
-            <a href="mailto:daniel.jaber@stoneagetools.com">daniel.jaber@stoneagetools.com</a></p>
-          </div>
-          <div class="col-sm-6">
             <p><strong>Ken Flint</strong><br/>
               Customer Service Specialist<br/>
               Main: +1 (970) 403-8583<br/>
               <a href="mailto:ken.flint@stoneagetools.com">ken.flint@stoneagetools.com</a></p>
           </div>
         </div>
+        
+        <h3 class="section-heading">StoneAge Solutions</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Kevin Simmons</strong><br/>
-              Customer Service Technical Lead<br/>
-              Main: +1 (970) 403-1430<br/>
-              <a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a></p>
+            <p><strong>Bill Shires</strong><br/>
+              StoneAge Solutions Director<br/>
+              Main: +1 (970) 903-4218<br/>
+              <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
+            <p><strong>Mike Johnson</strong><br/>
+              StoneAge Solutions Sales Manager<br/>
+              Main: +1 (970) 769-1448<br/>
+              <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
             <p><strong>Mike Kreeger</strong><br/>
-              Solutions Technical Sales Lead<br/>
+              StoneAge Solutions Technical Sales<br/>
               Main: +1 (970) 403-1437<br/>
               <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Kevin Simmons</strong><br/>
+              StoneAge Solutions Technical Sales<br/>
+              Main: +1 (970) 403-1430<br/>
+              <a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a></p>
           </div>
         </div>
         
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Mike Johnson</strong><br/>
-              West Coast Regional Sales<br/>
-            <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a></p>
+            <p><strong>Dan de la Torre</strong><br/>
+              Sales Director Americas<br/>
+              Main: +1 (970) 946-7703<br/>
+              <a href="mailto:dan.delatorre@stoneagetools.com">dan.delatorre@stoneagetools.com</a></p>
           </div>
         </div>
 
