--- a/podcast/episode-3.html
+++ b/podcast/episode-3.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: page
-title: Industrial Theory Podcast Episode 2 - The Importance of Workforce Safety Training in the Industrial Cleaning Industry 
+title: Industrial Theory Podcast Episode 3 - Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry 
 permalink: /3-hashim-moraisel
 master-slider: yes
 ---
