--- a/podcast/industrial-theory.html
+++ b/podcast/industrial-theory.html
@@ -20,29 +20,37 @@ master-slider: yes
     
     <div class="row podcast-listing">
       <div class="col-sm-6">
+        <a href="/4-david-beckum">
+          <img src="/assets/img/podcast/episode-4-david-beckum.jpg" class="img-responsive" alt="Episode 4-How to Create a Great Industrial Cleaning Company by Investing in Your People" />
+          <h3 style="text-transform: none;">David Beckumk: How to Create a Great Industrial Cleaning Company by Investing in Your People</h3>
+          <p class="small gray">February 21, 2020</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
         <a href="/3-hashim-moraisel">
           <img src="/assets/img/podcast/episode-3-Hashim-Moraisel.jpg" class="img-responsive" alt="Episode 3-Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry" />
           <h3 style="text-transform: none;">Hashim Moraisel: Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry</h3>
           <p class="small gray">January 13, 2020</p>
-          <button class="btn">Read more</button>
+          <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/2-marlies-tump">
           <img src="/assets/img/podcast/episode-2-marliese-tump.png" class="img-responsive" alt="Episode 2-The Importance of Workforce Safety Training in the Industrial Cleaning Industry" />
           <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry</h3>
           <p class="small gray">December 5, 2019</p>
-          <button class="btn">Read more</button>
+          <button class="btn">Listen</button>
         </a>
       </div>      
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/1-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 1-Leadership and Technology in the Industrial Cleaning Industry with Jimmy Peck" />
           <h3 style="text-transform: none;">Jimmy Peck: Leadership and Technology in the Industrial Cleaning Industry</h3>
           <p class="small gray">November 6, 2019</p>
-          <button class="btn">Read more</button>
+          <button class="btn">Listen</button>
         </a>
       </div>
     </div>
