--- a/solutions.html
+++ b/solutions.html
@@ -133,10 +133,18 @@ master-slider: yes
       StoneAge Solutions Director<br>
       Email: <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a><br>
       Main: +1 (970) 903-4218<br><br>
+      <strong>Mike Johnson</strong><br>
+      StoneAge Solutions Sales Manager<br>
+      Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
+      Main: +1 (970) 403-1437<br><br>
       <strong>Michael J. Kreeger</strong><br>
       StoneAge Solutions Technical Sales<br>
       Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
-      Main: +1 (970) 403-1437</p>
+      Main: +1 (970) 403-1437<br><br>
+      <strong>Kevin Simmons</strong><br>
+      StoneAge Solutions Technical Sales<br>
+      Email: <a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a><br>
+      Main: +1 (970) 403-1430</p>
   </aside>
 </section>
 
@@ -153,8 +161,7 @@ master-slider: yes
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <div class="testimonial">
-        <p>"We recognize StoneAge as a long term business partner. 
-The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
+        <p>"We recognize StoneAge as a long term business partner. The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
         <p class="attrib">- Andrew Dobson, Veolia</p>
         <img src="assets/img/logo_veolia.png" alt="Veolia">
       </div>
