--- a/request-catalog.html
+++ b/request-catalog.html
@@ -43,7 +43,7 @@ permalink: /request-catalog
       </a>
     </div>
     <div class="row margin-bottom-30">
-      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" style="max-height: 260px;" alt="2018-19 StoneAge Warthog Sewer Catalog">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2020.jpg" class="img-responsive" style="max-height: 260px;" alt="2020 StoneAge Warthog Sewer Catalog">
       </a>
     </div>
   </div>
