misc updates, podcast episode 5

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,16 @@ contact-main: yes
       <h4 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES. <span class="grey">Monday through Friday 8:00am - 5:00pm regional</span></h4>
     </div>
   </div>
+  
+  <!-- Updates -->
+  <div class="container">
+    <div class="col-sm-3" style="background-color: #d34b40; border:1px solid #d34b40; text-align: center; color:#fff; min-height:70px; padding:37px 20px; margin-bottom:0;">
+      <h2 style="font-weight: 800; margin: 0;">Location Updates</h2>
+    </div>
+    <div class="col-sm-9" style="border:1px solid #d34b40; color:#d34b40; padding: 10px 20px; margin-bottom:15px; min-height:70px;">
+      <p style="margin: 0;"><strong>All North American facilities are open.</strong> We encourage customers to call ahead so we can have orders ready to be picked up at a safe distance. <strong>StoneAge UK will be closed</strong> to walk-in traffic effective March 24th for a period of three (3) weeks but is still taking calls to process orders through our Rotterdam facility. Thank you for your support and understanding in these challenging times.</p>
+    </div>
+  </div>
 
   <!-- Nav tabs -->
   <div class="contact-nav container">
