--- a/loc-europe.html
+++ b/loc-europe.html
@@ -51,7 +51,16 @@ contact-uk: yes
         </div>
       </aside>
 
-      <div class="col-sm-7 col-sm-offset-1">
+      <div class="col-sm-7 col-sm-offset-1">        
+  
+        <!-- Updates -->
+        <div class="row margin-bottom-30">
+          <h3 style="font-weight:800; background-color:#d34b40; border:1px solid #d34b40; text-align:center; color:#fff; min-height:70px; padding:20px; margin-bottom:0;">StoneAge UK is temporarily closed to walk-in traffic</h3>
+          <div style="border:1px solid #d34b40; color:#d34b40; padding: 10px 20px; margin-bottom:15px; min-height:70px;">
+            <p style="margin: 0;"><strong>Please continue to call the main number as you usually do.</strong> Our customer service team is working from home to take your calls and process any request for quotes. Orders will be shipped from our Rotterdam (NL) facility. </p>
+          </div>
+        </div>
+        
         <div class="row margin-bottom-30">
           <p style="font-size:120%;">StoneAge UK provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
           <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
