--- a/solutions.html
+++ b/solutions.html
@@ -135,8 +135,8 @@ master-slider: yes
       Main: +1 (970) 903-4218<br><br>
       <strong>Mike Johnson</strong><br>
       StoneAge Solutions Sales Manager<br>
-      Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
-      Main: +1 (970) 403-1437<br><br>
+      Email: <a href="mailto:mike.johnson@stoneagetools.com">mike.johnson@stoneagetools.com</a><br>
+      Main: +1 (970) 769-1448<br><br>
       <strong>Michael J. Kreeger</strong><br>
       StoneAge Solutions Technical Sales<br>
       Email: <a href="mailto:mike.kreeger@stoneagetools.com">mike.kreeger@stoneagetools.com</a><br>
