New Git clone file merge -assets remaining

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -172,6 +172,9 @@
 <div id="go-h9-c-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/qcnW0Tl0qDs?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="sentinel-overview-vid">
+  <iframe class='sproutvideo-player' src='https://videos.sproutvideo.com/embed/d49ed5be1d11eac65c/7b20d2920fd5362d?autoPlay=true' width='854' height='480' frameborder='0' allowfullscreen></iframe>
+</div>
 <div id="sg-maint-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/t610YycBEzk?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
