New Git clone file merge -site files

--- a/careers.html
+++ b/careers.html
@@ -15,13 +15,16 @@ permalink: /jobs
 <section class="fluid-container bg-lt-grey">
   <div class="container padding-tb-60">
     <div class="row">
-      <div class="col-sm-6 margin-bottom-120">
-        <h1 class="thin grey spaced" style="margin-bottom:15px;"><em>Be part of something bigger<br>with a team that is dedicated, committed, and fun.</em></h1>
+      <div class="col-sm-5 margin-bottom-120">
+        <h1 class="thin grey spaced" style="margin-bottom:15px; font-size:34px;"><em>Be part of something bigger<br>with a team that is dedicated, committed, and fun.</em></h1>
         <p style="font-size:120%;">We employ the best people and inspire them to say,<br><strong>“Why would I work for anyone but StoneAge?”</strong></p>
         <p>
           <a href="/about"><em>Read about our company <i class="fa fa-angle-double-right"></i></em></a><br>
-          <a href="/about"><em>Questions about joining our team <i class="fa fa-angle-double-right"></i></em></a>
+<!--          <a href="/about"><em>Questions about joining our team <i class="fa fa-angle-double-right"></i></em></a>-->
         </p>
+      </div>
+      <div class="col-sm-7">
+        <img src="/assets/img/2020_SA_Team_hack-shirt.png" alt="StoneAge Durango staff" class="img-responsive" />
       </div>
     </div>
   </div>
