--- a/loc-durango.html
+++ b/loc-durango.html
@@ -107,6 +107,12 @@ contact-durango: yes
               Main: +1 (970) 946-7703<br/>
               <a href="mailto:dan.delatorre@stoneagetools.com">dan.delatorre@stoneagetools.com</a></p>
           </div>
+          <div class="col-sm-6">
+            <p><strong>Carrie Grant</strong><br/>
+              Canadian &amp; US West Coast<br/>Solutions Manager<br/>
+              Main: +1 (970) 799-1363<br/>
+              <a href="mailto:carrie.grant@stoneagetools.com">carrie.grant@stoneagetools.com</a></p>
+          </div>
         </div>
 
       </div>
