--- a/loc-europe.html
+++ b/loc-europe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: contact
-title: StoneAge Europe - Waterblast tools and automated equipment for high pressure hydrobrasting
+title: StoneAge UK - Waterblast tools and automated equipment for high pressure hydrobrasting
 permalink: /europe
 contact-uk: yes
 ---
@@ -53,16 +53,16 @@ contact-uk: yes
 
       <div class="col-sm-7 col-sm-offset-1">        
   
-        <!-- Updates -->
+        <!-- Updates
         <div class="row margin-bottom-30">
           <h3 style="font-weight:800; background-color:#d34b40; border:1px solid #d34b40; text-align:center; color:#fff; min-height:70px; padding:20px; margin-bottom:0;">StoneAge UK is temporarily closed to walk-in traffic</h3>
           <div style="border:1px solid #d34b40; color:#d34b40; padding: 10px 20px; margin-bottom:15px; min-height:70px;">
             <p style="margin: 0;"><strong>Please continue to call the main number as you usually do.</strong> Our customer service team is working from home to take your calls and process any request for quotes. Orders will be shipped from our Rotterdam (NL) facility. </p>
           </div>
-        </div>
+        </div> -->
         
         <div class="row margin-bottom-30">
-          <p style="font-size:120%;">StoneAge UK provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
+          <p style="font-size:120%;">StoneAge UK provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the UK direct and through our dealer network in Northern and Southern Europe.</p>
           <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
         </div>
 
@@ -74,21 +74,9 @@ contact-uk: yes
               <a href="mailto:steve.ellis@stoneagetools.com">steve.ellis@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
-            <p><strong>Karen Birt</strong><br/>
-              Administration Manager<br/>
-              <a href="mailto:karen.birt@stoneagetools.com">karen.birt@stoneagetools.com</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
             <p><strong>Andrew Birt</strong><br/>
               European Dealer/UK Sales Manager<br/>
               <a href="mailto:andrew.birt@stoneagetools.com">andrew.birt@stoneagetools.com</a></p>
-          </div>
-          <div class="col-sm-6">
-            <p><strong>Lukasz Wawrzyniak</strong><br/>
-              Sales Manager Germany &amp; Austria<br/>
-              <a href="mailto:lukasz.wawrzyniak@stoneagetools.com">lukasz.wawrzyniak@stoneagetools.com</a></p>
           </div>
         </div>
         <div class="row">
