--- a/loc-la.html
+++ b/loc-la.html
@@ -58,6 +58,13 @@ contact-la: yes
               Office Manager<br/>
               <a href="mailto:becky.smith@stoneagetools.com">becky.smith@stoneagetools.com</a></p>
           </div>
+          <div class="row">            
+            <div class="col-sm-6">
+              <p><strong>Ralph Weed</strong><br/>
+                Repair Technician<br/>
+              <a href="mailto:ralph.weed@stoneagetools.com">ralph.weed@stoneagetools.com</a></p>
+            </div>    
+          </div>
         </div>
         
         <h3 class="section-heading">Outside Sales</h3>
@@ -66,6 +73,11 @@ contact-la: yes
             <p><strong>Sean Baker</strong><br/>
               Southeast Regional Sales Manager<br/>
             <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Jonathan Wood</strong><br/>
+              Northeast &amp; Central Regional Sales Manager<br/>
+            <a href="mailto:jonathan.wood@stoneagetools.com">jonathan.wood@stoneagetools.com</a></p>
           </div>
         </div>
 
