--- a/loc-nl.html
+++ b/loc-nl.html
@@ -37,14 +37,13 @@ contact-nl: yes
             3274 KE Heinenoord<br/>
             Netherlands<br/><br/>
             +31 8590 27370<br/>
-            <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a><br/><br/>
-            <small>Monday to Friday 8:00am–5:00pm GMT+2</small></p>
+            <a href="mailto:sales-nl@stoneagetools.com">sales-nl@stoneagetools.com</a></p>
         </div>
       </aside>
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <p>StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support. Our primary service area includes the Benelux region, Austria, and Germany. International service inquiries can also be facilitated by <a href="/europe">StoneAge Europe, UK.</a></p>
+          <p>StoneAge Netherlands is a full-service facility offering equipment sales, rentals, repairs, training, and support. Our primary service area includes the Benelux region, France, Austria, and Germany.</p>
           <p><span class="slab bold text-uppercase">Tool rentals available!</span><br/>Our rental fleet is equipped with the tools you need. Contact us or <a href="/rentals">click here for information.</a></p>
         </div>
 
@@ -83,6 +82,18 @@ contact-nl: yes
             <p><strong>Lukasz Wawrzyniak</strong><br/>
               Sales Manager Germany &amp; Austria<br/>
               <a href="mailto:lukasz.wawrzyniak@stoneagetools.com">lukasz.wawrzyniak@stoneagetools.com</a></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Jean-Baptiste Ternoy</strong>
+            <br/>Sales Manager France<br/>
+              <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Alain Dessonnaz</strong>
+            <br/>Warthog Manager Europe<br/>
+              <a href="mailto:Alain.Dessonnaz@stoneagetools.com">alain.dessonnaz@stoneagetools.com</a></p>
           </div>
         </div>
             
