--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -26,7 +26,7 @@ permalink: /patents
         <th style="width:20%;">StoneAge Name</th>
         <th style="width:20%;">Model Number</th>
         <th style="width:20%;">US Patent Number(s)</th>
-        <th style="width:40%;">International Patent Number(s)</th>
+        <th style="width:40%;">Foreign Patent Number(s)</th>
       </tr>
     </thead>
     <tbody class="searchable">
@@ -34,37 +34,31 @@ permalink: /patents
         <td>2” Badger nozzle</td>
         <td>BA-LK</td>
         <td>8006920<br>8220724<br>D622810S</td>
-        <td>Europe:EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>Europe:EP2387471B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594612<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
         <td>2” Warthog nozzle</td>
         <td>WV-1/4; WU</td>
         <td>8006920<br>8220724</td>
-        <td>Europe: EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>Europe: EP2387471B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594612<br>Canada: 2752748<br>China: ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
-        <td>AutoBox ABX-2L</td>
-        <td>ABX-2L</td>
+        <td>AutoBox ABX-2L, ABX-2LB</td>
+        <td>ABX-2L, ABX-2LB</td>
         <td>9630801<br>9981822</td>
-        <td>Europe: EP3171993<br>Singapore: 11201700211Q</td>
-      </tr>
-      <tr>
-        <td>AutoBox ABX-2LB</td>
-        <td>ABX-2LB</td>
-        <td>10,392,218</td>
-        <td></td>
+        <td>Europe: EP3171993<br>Singapore: 11201700211Q<br/>Australia: 2015294517</td>
       </tr>
       <tr>
         <td>AutoBox ABX-3L</td>
         <td>ABX-3L</td>
-        <td>9896299</td>
+        <td>9896299<br>10,392,218</td>
         <td></td>
       </tr>
       <tr>
         <td>AutoBox ABX-PRO</td>
         <td>ABX-PRO</td>
         <td>10272480</td>
-        <td>Taiwan: 1646300</td>
+        <td>Taiwan: 1646300<br/>S. Korea: 10-2061469<br/>Canada: 3042555</td>
       </tr>
       <tr>
         <td>AutoBox Hose Guide Tube Assembly</td>
@@ -76,7 +70,7 @@ permalink: /patents
         <td>Banshee nozzle</td>
         <td>BN</td>
         <td>7,635,096<br>8006920<br>D617,870<br>D650,887<br>8434796</td>
-        <td>Europe: EP19633022B1<br>Taiwan: 1378828<br>Australia: 2013207556<br>Canada: 2855878<br>China: ZL201410332208.3<br>Malaysia: MY167969A<br>New Zealand: 609599<br>Hong Kong: HK1203883</td>
+        <td>Europe: EP19633022B1<br>Taiwan: I378828<br>Australia: 2013207556<br>Canada: 2855878<br>China: ZL201410332208.3<br>Malaysia: MY167969A<br>New Zealand: 609599<br>Hong Kong: HK1203883</td>
       </tr>
       <tr>
         <td>Barracuda</td>
@@ -87,19 +81,25 @@ permalink: /patents
       <tr>
         <td>Beetle nozzle</td>
         <td>BT</td>
-        <td>9950348<br>10265736</td>
-        <td></td>
+        <td>8006920<br>8220724<br>D724695</td>
+        <td>Europe: EP238747B1<br>Taiwan: I378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China:ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
       </tr>
       <tr>
         <td>Boiler Tube Cleaner</td>
         <td>BTC</td>
-        <td>8006920<br>8220724<br>D724695</td>
-        <td>Europe: EP238747B1<br>Taiwan: 1378828<br>Australia: 2009354020<br>New Zealand: 594919<br>Canada: 2752748<br>China:ZL200980157707.0<br>Malaysia: MY159947A<br>Hong Kong: HK1162392</td>
+        <td>9950348<br>10265736</td>
+        <td></td>
       </tr>
       <tr>
         <td>Cable Swivel Tool</td>
         <td>CST</td>
         <td>6085994</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Dome Lance Positioner</td>
+        <td>DLP</td>
+        <td>10,809,023</td>
         <td></td>
       </tr>
       <tr>
@@ -112,12 +112,12 @@ permalink: /patents
         <td>Hose Containment System</td>
         <td>HCS</td>
         <td>10336571<br>10427907</td>
-        <td></td>
+        <td>China: ZL201680059939.2<br/>Europe: 336525881</td>
       </tr>
       <tr>
         <td>Lightweight Positioner</td>
         <td>LWP</td>
-        <td>10024613</td>
+        <td>10024613<br>8964368<br/>9662689</td>
         <td>Europe: EP3172519B1<br>Singapore: 11201700244W</td>
       </tr>
       <tr>
@@ -135,7 +135,7 @@ permalink: /patents
       <tr>
         <td>ProDrain</td>
         <td>PRO-700</td>
-        <td>10,272,980</td>
+        <td>10,272,480</td>
         <td>Taiwan: 164300</td>
       </tr>
       <tr>
@@ -154,13 +154,13 @@ permalink: /patents
         <td>Spitfire</td>
         <td>SPFR</td>
         <td>8006920<br>8544768<br>8220724<br>9067220</td>
-        <td>Europe: EP2393602<br>Australia: 2010319761<br>Canada: 2753651<br>China: ZL201080015071.9<br>New Zealand: 594919<br>Hong Kong: HK1163594<br>Malayzia: MY160550A</td>
+        <td>Europe: EP2393602<br>Australia: 2010319761<br>Canada: 2753651<br>China: ZL201080015071.9<br>New Zealand: 594919<br>Hong Kong: HK1163594<br>Malaysia: MY160550A</td>
       </tr>
       <tr>
         <td>Striker</td>
         <td>SKR</td>
         <td>9610603<br>9919333</td>
-        <td>Europe: EP3242753</td>
+        <td>Europe: EP3242753B1<br>China: ZL201680005201.8<br>Singapore: 11201704676P</td>
       </tr>
       <tr>
         <td>Warthog Magnum</td>
@@ -176,5 +176,5 @@ permalink: /patents
       </tr>
     </tbody>
   </table>
-  <p><span class="grey">Updated: November 11, 2019</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
+  <p><span class="grey">Updated: October 9, 2020</span><br><em>StoneAge patent information can be found on the web at <a href="http://www.sapatents.com">www.sapatents.com</a></em></p>
 </section>
