--- a/training.html
+++ b/training.html
@@ -3,7 +3,7 @@ layout: default
 page-type: landing
 title: StoneAge Training
 excerpt: StoneAge offers operator and crew leader instruction by industry experts in waterjet safety, hydroblasting applications, and the science behind waterblast techniques for high pressure industrial cleaning.
-permalink: /training
+permalink: /training_old
 ---
 
 <main class="training landing">
