--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -17,6 +17,25 @@ permalink: /waterblast-tools-automated-equipment
     
   <section class="container directory">
 
+    <div class="mix exchanger-cleaning" data-name="sentinel" data-designation="automated">
+      <a href="/sentinel_2020" class="search-text">
+        <img src="/assets/img/product/sentinel-logo-01.jpg" class="img-responsive" />
+        <h3>Sentinel</h3>
+        <h5>Automated Exchanger Cleaning</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td colspan="2" style="text-align:center;">For AutoBox tractors</td>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Smart sensor technology</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
     <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
       <a href="/autopack-3l" class="search-text">
         <img src="/assets/img/product/autopack-3l-01.jpg" class="img-responsive" />
@@ -196,6 +215,7 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
+<!--
     <div class="mix exchanger-cleaning accessories" data-name="autostroke" data-designation="automated">
       <a href="/autostroke" class="search-text">
         <img src="/assets/img/product/ast-01.jpg" class="img-responsive" />
@@ -215,6 +235,7 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
+-->
 
     <div class="mix exchanger-cleaning" data-name="bundle-blaster" data-designation="automated">
       <a href="/bundle-blaster" class="search-text">
@@ -937,18 +958,18 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix surface-prep" data-name="barracuda" data-designation="manual">
       <a href="/barracuda" class="search-text">
-        <img src="/assets/img/product/barracuda-01.jpg" class="img-responsive" />
+        <img src="/assets/img/product/barracuda-04.jpg" class="img-responsive" />
         <h3>Barracuda</h3>
         <h5>Rotary shotgun cleaning nozzles</h5>
         <table class="table">
           <tbody>
             <tr>
               <th>Pressure Range</th>
-              <td>2–44k psi<br><span class="metric">140–3000 bar</span></td>
+              <td>5–44k psi<br><span class="metric">350–3000 bar</span></td>
             </tr>
             <tr>
               <th>Flow Range</th>
-              <td>1.7-11 gpm<br><span class="metric">6-42 l/min</span></td>
+              <td>2.3-13.3 gpm<br><span class="metric">9-50 l/min</span></td>
             </tr>
           </tbody>
         </table>
@@ -1303,7 +1324,7 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix surface-prep" data-name="barracuda" data-designation="manual">
       <a href="/barracuda" class="search-text">
-        <img src="/assets/img/product/barracuda-01.jpg" class="img-responsive" />
+        <img src="/assets/img/product/barracuda-04.jpg" class="img-responsive" />
         <h3>Barracuda</h3>
         <h5>Rotary shotgun cleaning nozzles</h5>
         <table class="table">
@@ -1418,7 +1439,7 @@ permalink: /waterblast-tools-automated-equipment
 
     <div class="mix surface-prep" data-name="barracuda" data-designation="manual">
       <a href="/barracuda" class="search-text">
-        <img src="/assets/img/product/barracuda-01.jpg" class="img-responsive" />
+        <img src="/assets/img/product/barracuda-04.jpg" class="img-responsive" />
         <h3>Barracuda</h3>
         <h5>Rotary shotgun cleaning nozzles</h5>
         <table class="table">
@@ -1706,6 +1727,8 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
+    
+<!--
     <div class="mix exchanger-cleaning accessories" data-name="autostroke" data-designation="automated">
       <a href="/autostroke" class="search-text">
         <img src="/assets/img/product/ast-01.jpg" class="img-responsive" />
@@ -1725,6 +1748,7 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
+-->
 
     <div class="mix accessories" data-name="backout" data-designation="manual">
       <a href="/backout-prevention" class="search-text">
