--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -75,7 +75,7 @@ contact-ohio: yes
           </div>
           <div class="col-sm-6">
             <p><strong>Jonathan Wood</strong><br/>
-              Northeast Regional Sales Manager<br/>
+              Northeast &amp; Central Regional Sales Manager<br/>
             <a href="mailto:jonathan.wood@stoneagetools.com">jonathan.wood@stoneagetools.com</a></p>
           </div>
         </div>
